--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: linear-gradient(180deg, #d6e9eb, #3b1baf);
+    background-image: linear-gradient(120deg, #ff6f47, #ffffff);
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
